--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-quill": "^2.0.0-beta.2",
     "react-router-dom": "^5.2.0",
     "wangeditor": "^4.7.1"
   },
