--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "braft-editor": "^2.3.9",
+    "global": "^4.4.0",
+    "prettier": "^2.3.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-quill": "^2.0.0-beta.2",
