--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
     "braft-editor": "^2.3.9",
     "global": "^4.4.0",
     "prettier": "^2.3.0",
@@ -14,6 +15,9 @@
     "react-dom": "^17.0.0",
     "react-quill": "^2.0.0-beta.2",
     "react-router-dom": "^5.2.0",
+    "slate": "^0.63.0",
+    "slate-history": "^0.62.0",
+    "slate-react": "^0.63.0",
     "wangeditor": "^4.7.1"
   },
   "devDependencies": {
