--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "braft-editor": "^2.3.9",
     "global": "^4.4.0",
     "prettier": "^2.3.0",
+    "prismjs": "^1.23.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-quill": "^2.0.0-beta.2",
