--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/css": "^11.1.3",
     "braft-editor": "^2.3.9",
     "global": "^4.4.0",
+    "is-url": "^1.2.4",
     "prettier": "^2.3.0",
     "prismjs": "^1.23.0",
     "react": "^17.0.0",
